build/hoverfly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: hoverfly
  name: hoverfly
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hoverfly
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/hoverfly: "true"
        io.kompose.service: hoverfly
    spec:
      containers:
        - image: hoverfly:latest
          name: hoverfly
          ports:
            - containerPort: 8888
            - containerPort: 8500
          resources: {}
      restartPolicy: Always
status: {}
