build/hoverfly-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: hoverfly
  name: hoverfly
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
    - name: "8500"
      port: 8500
      targetPort: 8500
  selector:
    io.kompose.service: hoverfly
status:
  loadBalancer: {}
